fix: actor image on traveller sheet too small for firefox

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -438,6 +438,8 @@ h2 {
   /* flex-wrap: nowrap; */
   justify-content: space-between;
   grid-template-rows: 4% 39% 4.6% 19.2% 22.2%;
+  width: 100%;
+  width: -moz-available;
   width: -webkit-fill-available;
 }
 
